function(add_full_renderer_test target source)
    add_executable(${target}
        ${source}
    )

    target_link_libraries(${target} PRIVATE FullRenderer::full_renderer)
    target_include_directories(${target} PRIVATE ${PROJECT_SOURCE_DIR}/src)
    target_compile_features(${target} PRIVATE cxx_std_17)
    set_target_properties(${target} PROPERTIES
        CXX_EXTENSIONS OFF
    )

    add_test(NAME ${target} COMMAND ${target})
endfunction()

function(add_full_engine_test target source)
    add_executable(${target}
        ${source}
    )

    target_link_libraries(${target} PRIVATE full_engine)
    target_include_directories(${target} PRIVATE ${PROJECT_SOURCE_DIR}/src)
    target_compile_features(${target} PRIVATE cxx_std_17)
    set_target_properties(${target} PROPERTIES
        CXX_EXTENSIONS OFF
    )

    add_test(NAME ${target} COMMAND ${target})
endfunction()

add_full_engine_test(full_engine_core_tests engine_core_test.cpp)
add_full_engine_test(full_engine_chunk_terrain_handle_map_tests engine_chunk_terrain_handle_map_test.cpp)
add_full_engine_test(full_engine_render_space_tests engine_render_space_test.cpp)
add_full_engine_test(full_engine_terrain_descriptor_builder_tests engine_terrain_descriptor_builder_test.cpp)
add_full_engine_test(full_engine_terrain_chunk_setup_tests engine_terrain_chunk_setup_test.cpp)
add_full_engine_test(full_engine_terrain_chunk_request_tests engine_terrain_chunk_requests_test.cpp)
add_full_engine_test(full_engine_terrain_integration_diagnostics_tests engine_terrain_integration_diagnostics_test.cpp)
add_full_engine_test(full_engine_terrain_lifecycle_plan_tests engine_terrain_lifecycle_plan_test.cpp)
add_full_engine_test(full_engine_terrain_pipeline_tests engine_terrain_pipeline_test.cpp)
add_full_engine_test(full_engine_terrain_pipeline_integration_tests engine_terrain_pipeline_integration_test.cpp)
add_full_engine_test(full_engine_terrain_renderer_commands_tests engine_terrain_renderer_commands_test.cpp)
add_full_engine_test(full_engine_terrain_resource_catalog_tests engine_terrain_resource_catalog_test.cpp)
add_full_engine_test(full_engine_terrain_render_prep_tests engine_terrain_render_prep_test.cpp)
add_full_engine_test(full_engine_terrain_runtime_controller_tests engine_terrain_runtime_controller_test.cpp)
add_full_engine_test(full_engine_terrain_runtime_event_export_tests engine_terrain_runtime_event_export_test.cpp)
add_full_engine_test(full_engine_terrain_runtime_event_import_tests engine_terrain_runtime_event_import_test.cpp)
add_full_engine_test(full_engine_terrain_runtime_state_snapshot_tests engine_terrain_runtime_state_snapshot_test.cpp)
add_full_engine_test(full_engine_terrain_submission_adapter_tests engine_terrain_submission_adapter_test.cpp)
add_full_engine_test(full_engine_world_chunk_catalog_tests engine_world_chunk_catalog_test.cpp)
add_full_engine_test(full_engine_world_chunk_set_tests engine_world_chunk_set_test.cpp)
add_full_engine_test(full_engine_world_render_snapshot_tests engine_world_render_snapshot_test.cpp)
add_full_engine_test(full_engine_world_residency_requests_tests engine_world_residency_requests_test.cpp)
add_full_engine_test(full_engine_world_tests engine_world_test.cpp)
add_full_engine_test(full_engine_world_origin_tests engine_world_origin_test.cpp)

add_full_renderer_test(full_renderer_lifecycle_tests renderer_lifecycle_test.cpp)
add_full_renderer_test(full_renderer_terrain_grid_mesh_tests terrain_grid_mesh_test.cpp)
add_full_renderer_test(full_renderer_terrain_math_tests terrain_math_test.cpp)
add_full_renderer_test(full_renderer_culling_diagnostics_tests culling_diagnostics_test.cpp)
add_full_renderer_test(full_renderer_frame_budget_tests frame_budget_test.cpp)
add_full_renderer_test(full_renderer_material_policy_tests material_policy_test.cpp)
add_full_renderer_test(full_renderer_asset_contract_tests asset_contract_test.cpp)
add_full_renderer_test(full_renderer_terrain_system_tests terrain_system_test.cpp)
add_full_renderer_test(full_renderer_terrain_debug_tests terrain_debug_test.cpp)
add_full_renderer_test(full_renderer_shadow_math_tests shadow_math_test.cpp)
add_full_renderer_test(full_renderer_environment_tests environment_test.cpp)
add_full_renderer_test(full_renderer_animation_tests animation_test.cpp)
add_full_renderer_test(full_renderer_ssao_tests ssao_test.cpp)
add_full_renderer_test(full_renderer_decal_tests decal_test.cpp)
add_full_renderer_test(full_renderer_particle_tests particle_test.cpp)
add_full_renderer_test(full_renderer_weather_tests weather_test.cpp)
add_full_renderer_test(full_renderer_fade_tests fade_test.cpp)
add_full_renderer_test(full_renderer_color_grading_tests color_grading_test.cpp)
add_full_renderer_test(full_renderer_post_pass_tests post_pass_test.cpp)
add_full_renderer_test(full_renderer_validation_tests validation_test.cpp)
add_full_renderer_test(full_renderer_long_session_churn_tests long_session_churn_test.cpp)
add_full_renderer_test(full_renderer_engine_streaming_seam_tests engine_streaming_seam_test.cpp)
target_link_libraries(full_renderer_engine_streaming_seam_tests PRIVATE full_renderer_engine_bridge)
add_full_renderer_test(full_renderer_resource_lifetime_tests resource_lifetime_test.cpp)
add_full_renderer_test(full_renderer_public_header_compile_tests public_header_compile_test.cpp)
